--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>L</span>
         <span>U</span>
         <span>❤</span>
-        <span>❤</span>
+        <!--<span>❤</span>-->
     </div>
     <div class="greetings">
         <span></span>
