--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span></span>
     </div>
     <div class="description">
-        <span>En todos los febreros te llevare 20 rosas :3</span>
+        <span>En chaque avril, je t'apporterai 20 roses :3</span>
     </div>
     <div class="button">
         <button>
